# drf_ecommerce

./: .coverage  .dockerignore  .gitignore  Dockerfile  README.md  compose.yaml  entrypoint.sh  pyproject.toml  schema.yml
nginx/: default.conf
orders/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
orders/migrations/: 0001_initial.py  0002_initial.py
payment/: models.py  serializers.py
payment/migrations/: 0001_initial.py
products/: admin.py  models.py  serializers.py  tests.py  urls.py  views.py
products/migrations/: 0001_initial.py  0002_alter_category_parent_category.py  0002_alter_category_parent_category_alter_category_slug_and_more.py  0002_alter_product_options_alter_category_slug_and_more.py  0003_alter_category_name_alter_category_parent_category.py
root/: celery.py  settings.py  urls.py
users/: admin.py  models.py  permissions.py  serializers.py  tests.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_address_options_alter_user_options_and_more.py  0003_remove_address_apartment_address.py
